--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
     justify-content: center;
     background-image: url(img/biography-bg.png);
     height: 500px;
+    margin-bottom: 50px;
 }
 
 .latest-works h1 {
@@ -68,6 +69,7 @@ body {
 }
 
 .work-container {
+    margin-top: 40px;
     display: flex;
     justify-content: space-evenly;
     width: 95%;
@@ -75,18 +77,18 @@ body {
 }
 
 .work-item img {
-    border-radius: 20px;
     width: 100%;
 }
 
 .work-item {
     width: 30%;
-    box-shadow: 20px 20px 20px gray;
-    
+    box-shadow: 20px 20px 40px gray;
+    transition: .5s;
 }
 
-.client-quote {
-    
+.work-item:hover {
+    box-shadow: 10px 10px 20px gray;
+    transition: .5s;
 }
 
 .client-section {
@@ -94,7 +96,14 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-bottom: 50px;
+}
+
+.client-quote {
+    margin-bottom: 100px;
+}
+
+.client-quote h3 {
+    color: gray;
 }
 
 .email-button {
@@ -102,7 +111,8 @@ body {
     padding: 10px 100px;
     color: white;
     background-image: linear-gradient(45deg, magenta, lightsalmon );
-    border-radius: 10px;    
+    border-radius: 10px; 
+    margin-bottom: 100px;   
 }
 
 footer {
