last but not the least

--- a/style.css
+++ b/style.css
@@ -3,6 +3,17 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+.menu {
+    text-align: center;
+    font-size: 20px;
+}
+
+.menu li {
+    display: inline-block;
+    margin-right: 15px ;
+
+}
+
 .intro h1 {
     color: red;
     font-size: 40px;
